--- a/app/src/main/res/layout/fragment_introduction.xml
+++ b/app/src/main/res/layout/fragment_introduction.xml
@@ -15,6 +15,8 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/indicator_layout"
         android:layout_width="wrap_content"
+        android:animateLayoutChanges="true"
+        android:animationCache="true"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
