--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,14 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".SignInSignUp_fragments.LoginFragment">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/view"
@@ -40,7 +32,7 @@
         android:layout_width="130dp"
         android:layout_height="110dp"
         android:layout_marginTop="4dp"
-        android:src="@drawable/lll"
+        android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -125,57 +117,37 @@
             android:maxLength="40" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <CheckBox
-        android:id="@+id/checkBox15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@color/white"
-        android:button="@drawable/checks"
-        android:padding="10dp"
-        android:text="Remember me"
-        android:fontFamily="@font/gilroymedium"
-        android:textColor="@color/black"
-        android:textStyle="normal"
-        android:theme="@style/check"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/sing_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="40dp"
         android:backgroundTint="#246bfd"
         android:fontFamily="@font/gilroymedium"
         android:text="Sign in"
+        android:layout_marginTop="32dp"
         android:textAllCaps="false"
         android:textSize="15dp"
         android:textStyle="bold"
         app:cornerRadius="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox15" />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
-    <View
+    <TextView
         android:id="@+id/sign_up"
-        android:layout_width="50dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="170dp"
-        android:layout_marginEnd="116dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:textColor="#246bfd"
+        android:textSize="15dp"
+        android:fontFamily="@font/gilroyregular"
+        android:text="not have an account , Sign up"
+        app:layout_constraintEnd_toEndOf="@+id/sing_in"
         app:layout_constraintTop_toBottomOf="@+id/sing_in" />
 
-    <View
-        android:id="@+id/google"
-        android:layout_width="216dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="92dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sing_in" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
