--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:title="@string/home"
+    <item android:title="Home"
         android:id="@+id/menu_home"
         android:icon="@drawable/home_ic" />
-    <item android:title="@string/my_course"
+    <item android:title="My course"
         android:id="@+id/menu_course"
         android:icon="@drawable/my_courses_ic" />
     <item android:title="Inbox"
