--- a/app/src/main/res/layout/home_course_item.xml
+++ b/app/src/main/res/layout/home_course_item.xml
@@ -11,14 +11,15 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/maincard">
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginStart="8dp"
             app:cardCornerRadius="20dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView10"
+            app:layout_constraintBottom_toBottomOf="@id/maincard"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -65,20 +66,10 @@
             android:text="$48"
             android:textStyle="bold"
             android:textColor="#335ef7"
-            android:textSize="18sp"
+            android:textSize="20dp"
+            android:layout_marginStart="10dp"
             app:layout_constraintStart_toStartOf="@+id/home_course_item_name"
             app:layout_constraintTop_toBottomOf="@+id/home_course_item_name" />
-
-        <TextView
-            android:id="@+id/course_detail_old_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="$80"
-            android:layout_marginTop="2dp"
-            android:textColor="#616161"
-            app:layout_constraintStart_toEndOf="@+id/course_detail_price"
-            app:layout_constraintTop_toTopOf="@+id/course_detail_price" />
 
         <ImageView
             android:id="@+id/imageView"
@@ -103,30 +94,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/course_detail_price" />
-
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:text="|"
-            android:textColor="#616161"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/course_detail_rating"
-            app:layout_constraintStart_toEndOf="@+id/course_detail_rating"
-            app:layout_constraintTop_toTopOf="@+id/course_detail_rating" />
-
-        <TextView
-            android:textColor="#616161"
-            android:id="@+id/course_detail_review_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:text="12,232 students"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/course_detail_rating"
-            app:layout_constraintStart_toEndOf="@+id/textView10"
-            app:layout_constraintTop_toTopOf="@+id/course_detail_rating" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/home_course_item_bookmark"
